# app1-s6

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: gen_tasks.py  multi_proc.py  run_batch.sh  run_batch_mp.sh  test_single.md5  test_single.sh
src/: asset_conv.cpp  asset_conv_backup_step_1_working.cpp  lab_ex1.cpp  lab_ex2.cpp  lab_ex3.cpp  test_for_args.cpp
validation/: run_batch.md5  valid-docker.md5  valid.md5  valid.task
waveprop/: CMakeLists.txt  fiddle.py  ftdt_yee.py  lab1_ex4.py  requirements.txt
waveprop/src/: wave_prop copy.cpp  wave_prop.cpp
